k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-userdata
  labels:
    app: backend-userdata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-userdata
  template:
    metadata:
      labels:
        app: backend-userdata
    spec:
      containers:
      - name: backend-userdata
        image: akshat1414/userdata-microservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "400m"
            memory: "350Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
